Roles dividing content

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -11,7 +11,31 @@
 		"to": "По",
 		"all": "Все",
 		"save": "Сохранить",
-		"add": "Добавить"
+		"add": "Добавить",
+		"roles": {
+			"admin": "Админ",
+			"moderator": "Модератор",
+			"viewer": "Просматриватель",
+			"user": "Пользователь"
+		}
+	},
+
+	"layout": {
+		"footer": {
+			"copyright": "Copyright © <1>{{year}}</1> by <0>Yuri Prisyazhnyy.</1>",
+			"rights": "Все права защищены"
+		},
+		"header": {
+			"profile": "Профиль",
+			"exit": "Выйти"
+		},
+		"sidebar": {
+			"menu": "Навигационное меню",
+			"admin": "Админ панель",
+			"profile": "Профиль",
+			"departments": "Отделения",
+			"commissions": "Комиссии"
+		}
 	},
 
 	"home": {
@@ -99,22 +123,37 @@
 
 	"commissions": {
 		"name": "Цикловые комиссии",
-
 		"all": {
 			"pageTitle": "Цикловые комиссии",
 			"filterName": "Поиск по названию отделения",
 			"name": "Название",
 			"noForm": "цикловых комиссий"
 		},
-
 		"add": {
 			"pageTitle": "Добавить цикловую комиссию",
 			"name": "Название цикловой комиссии"
 		},
-
 		"edit": {
 			"pageTitle": "Редактировать цикловую комиссию",
 			"name": "Название цикловой комиссии"
+		}
+	},
+
+	"departments": {
+		"name": "Отделения",
+		"all": {
+			"pageTitle": "Отделения",
+			"filterName": "Поиск по названию отделения",
+			"name": "Название",
+			"noForm": "отделений"
+		},
+		"add": {
+			"pageTitle": "Добавить отделение",
+			"name": "Название отделения"
+		},
+		"edit": {
+			"pageTitle": "Редактировать отделение",
+			"name": "Название отделения"
 		}
 	}
 }
