Ranks CRUD front ready

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -34,7 +34,8 @@
 			"admin": "Админ панель",
 			"profile": "Профиль",
 			"departments": "Отделения",
-			"commissions": "Комиссии"
+			"commissions": "Комиссии",
+			"ranks": "Должности"
 		}
 	},
 
@@ -83,7 +84,13 @@
 				"title": "Повышения квалификаций",
 				"nextDate": "Термин следующей квалификации: {{nextDate}}",
 				"category": "Категория",
-				"date": "Дата"
+				"date": "Дата",
+				"categories": [
+					"Спеціаліст",
+					"Спеціаліст 2 категорії",
+					"Спеціаліст 1 категорії",
+					"Спеціаліст вищої категорії"
+				]
 			},
 			"honors": {
 				"title": "Награды",
@@ -154,6 +161,24 @@
 		"edit": {
 			"pageTitle": "Редактировать отделение",
 			"name": "Название отделения"
+		}
+	},
+
+	"ranks": {
+		"name": "Должности",
+		"all": {
+			"pageTitle": "Должности",
+			"filterName": "Поиск по названию должности",
+			"name": "Название",
+			"noForm": "должностей"
+		},
+		"add": {
+			"pageTitle": "Добавить должность",
+			"name": "Название должность"
+		},
+		"edit": {
+			"pageTitle": "Редактировать должность",
+			"name": "Название должности"
 		}
 	}
 }
