All and add publications page ui ready

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -35,7 +35,8 @@
 			"profile": "Профиль",
 			"departments": "Отделения",
 			"commissions": "Комиссии",
-			"ranks": "Должности"
+			"ranks": "Должности",
+			"publications": "Публикации"
 		}
 	},
 
@@ -179,6 +180,33 @@
 		"edit": {
 			"pageTitle": "Редактировать должность",
 			"name": "Название должности"
+		}
+	},
+
+	"publications": {
+		"name": "Публикации",
+		"all": {
+			"pageTitle": "Публикации",
+			"filterName": "Поиск по названию публикации",
+			"name": "Название публикации*",
+			"authors": "Авторы",
+			"date": "Дата публикации",
+			"filterFrom": "С",
+			"filterTo": "По",
+			"filterUser": "Поиск по автору",
+			"noForm": "публикаций"
+		},
+		"add": {
+			"pageTitle": "Добавить публикацию",
+			"name": "Название публикации*",
+			"date": "Дата публикации",
+			"publisher": "Издатель",
+			"authors": "Авторы*",
+			"anotherAuthors": "Другие авторы"
+		},
+		"edit": {
+			"pageTitle": "Редактировать публикацию",
+			"name": "Название публикации"
 		}
 	}
 }
