All, add and edit of publication prototype are ready(left some fixes)

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -202,11 +202,17 @@
 			"date": "Дата публикации",
 			"publisher": "Издатель",
 			"authors": "Авторы*",
-			"anotherAuthors": "Другие авторы"
+			"anotherAuthors": "Другие авторы",
+			"url": "URL"
 		},
 		"edit": {
 			"pageTitle": "Редактировать публикацию",
-			"name": "Название публикации"
+			"name": "Название публикации",
+			"date": "Дата публикации",
+			"publisher": "Издатель",
+			"authors": "Авторы*",
+			"anotherAuthors": "Другие авторы",
+			"url": "URL"
 		}
 	}
 }
