Single page of publication are ready

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -213,6 +213,18 @@
 			"authors": "Авторы*",
 			"anotherAuthors": "Другие авторы",
 			"url": "URL"
+		},
+		"single": {
+			"pageTitle": "Страница публикации",
+			"info": {
+				"id": "<0>ID: <1>{{id}}</1></0>",
+				"title": "<0>Название: <1>{{title}}</1></0>",
+				"authors": "<0>Авторы: <1>{{authors}}</1></0>",
+				"date": "<0>Дата публикации: <1>{{authors}}</1></0>",
+				"publisher": "<0>Издатель: <1>{{publisher}}</1></0>",
+				"url": "<0>URL: <2><1>{{url}}</1></2></0>",
+				"description": "<0>Описание: <1>{{description}}</1></0>"
+			}
 		}
 	}
 }
