Publications export are ready

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -12,6 +12,7 @@
 		"all": "Все",
 		"save": "Сохранить",
 		"add": "Добавить",
+		"downloadExample": "Скачать образец",
 		"roles": {
 			"admin": "Админ",
 			"moderator": "Модератор",
@@ -225,6 +226,10 @@
 				"url": "<0>URL: <2><1>{{url}}</1></2></0>",
 				"description": "<0>Описание: <1>{{description}}</1></0>"
 			}
+		},
+		"import": {
+			"pageTitle": "Импорт публикаций",
+			"file": "Выберите файл для импорта"
 		}
 	}
 }
