--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -37,7 +37,8 @@
 			"departments": "Отделения",
 			"commissions": "Комиссии",
 			"ranks": "Должности",
-			"publications": "Публикации"
+			"publications": "Публикации",
+			"categories": "Категории стажировки"
 		}
 	},
 
@@ -230,6 +231,24 @@
 		"import": {
 			"pageTitle": "Импорт публикаций",
 			"file": "Выберите файл для импорта"
+		}
+	},
+
+	"categories": {
+		"name": "Категории стажировок",
+		"all": {
+			"pageTitle": "Категории стажировок",
+			"filterName": "Поиск по названию категории",
+			"name": "Название",
+			"noForm": "категорий стажировок"
+		},
+		"add": {
+			"pageTitle": "Добавить категорию",
+			"name": "Название категории"
+		},
+		"edit": {
+			"pageTitle": "Редактировать категорию",
+			"name": "Название категории"
 		}
 	}
 }
