All, add, import and single UI are ready

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -13,6 +13,7 @@
 		"save": "Сохранить",
 		"add": "Добавить",
 		"downloadExample": "Скачать образец",
+		"importFile": "Выберите файл для импорта",
 		"roles": {
 			"admin": "Админ",
 			"moderator": "Модератор",
@@ -38,7 +39,8 @@
 			"commissions": "Комиссии",
 			"ranks": "Должности",
 			"publications": "Публикации",
-			"categories": "Категории стажировки"
+			"categories": "Категории стажировки",
+			"honors": "Награды"
 		}
 	},
 
@@ -249,6 +251,31 @@
 		"edit": {
 			"pageTitle": "Редактировать категорию",
 			"name": "Название категории"
+		}
+	},
+
+	"honors": {
+		"name": "Награды",
+		"types": ["МОН", "Президента", "КМУ", "Ректора", "МАН", "Спортивные достижения", "Олимпиады и конкурсы", "Другие"],
+		"all": {
+			"pageTitle": "Награды",
+			"noForm": "наград"
+		},
+		"add": {
+			"pageTitle": "Добавить награду"
+		},
+		"edit": {
+			"pageTitle": "Редактировать награду"
+		},
+		"single": {
+			"pageTitle": "Страница наград",
+			"info": {
+				"id": "<0>ID: <1>{{id}}</1></0>"
+			}
+		},
+		"import": {
+			"pageTitle": "Импорт наград",
+			"file": "Выберите файл для импорта"
 		}
 	}
 }
