Honors model CRUD are ready

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -259,13 +259,28 @@
 		"types": ["МОН", "Президента", "КМУ", "Ректора", "МАН", "Спортивные достижения", "Олимпиады и конкурсы", "Другие"],
 		"all": {
 			"pageTitle": "Награды",
-			"noForm": "наград"
+			"noForm": "наград",
+			"filterUser": "Поиск по пользователю",
+			"filterName": "Поиск по названию",
+			"filterTo": "С",
+			"filterFrom": "По",
+			"user": "Пользователь",
+			"title": "Название",
+			"date": "Дата вручения"
 		},
 		"add": {
-			"pageTitle": "Добавить награду"
+			"pageTitle": "Добавить награду",
+			"title": "Название",
+			"order": "Номер",
+			"date": "Дата вручения",
+			"user": "Пользователь"
 		},
 		"edit": {
-			"pageTitle": "Редактировать награду"
+			"pageTitle": "Редактировать награду",
+			"title": "Название",
+			"order": "Номер",
+			"date": "Дата вручения",
+			"user": "Пользователь"
 		},
 		"single": {
 			"pageTitle": "Страница наград",
