Rebukes BL are ready

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -40,7 +40,8 @@
 			"ranks": "Должности",
 			"publications": "Публикации",
 			"categories": "Категории стажировки",
-			"honors": "Награды"
+			"honors": "Награды",
+			"rebukes": "Выговоры"
 		}
 	},
 
@@ -256,7 +257,6 @@
 
 	"honors": {
 		"name": "Награды",
-		"types": ["МОН", "Президента", "КМУ", "Ректора", "МАН", "Спортивные достижения", "Олимпиады и конкурсы", "Другие"],
 		"all": {
 			"pageTitle": "Награды",
 			"noForm": "наград",
