Rebukes ui are ready

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -232,8 +232,7 @@
 			}
 		},
 		"import": {
-			"pageTitle": "Импорт публикаций",
-			"file": "Выберите файл для импорта"
+			"pageTitle": "Импорт публикаций"
 		}
 	},
 
@@ -289,8 +288,45 @@
 			}
 		},
 		"import": {
-			"pageTitle": "Импорт наград",
-			"file": "Выберите файл для импорта"
+			"pageTitle": "Импорт наград"
+		}
+	},
+
+	"rebukes": {
+		"name": "Выговоры",
+		"all": {
+			"pageTitle": "Выговоры",
+			"noForm": "выговоров",
+			"filterUser": "Поиск по пользователю",
+			"filterName": "Поиск по названию",
+			"filterTo": "С",
+			"filterFrom": "По",
+			"user": "Пользователь",
+			"title": "Название",
+			"date": "Дата вручения"
+		},
+		"add": {
+			"pageTitle": "Добавить выговор",
+			"title": "Название",
+			"order": "Номер",
+			"date": "Дата вручения",
+			"user": "Пользователь"
+		},
+		"edit": {
+			"pageTitle": "Редактировать выговор",
+			"title": "Название",
+			"order": "Номер",
+			"date": "Дата вручения",
+			"user": "Пользователь"
+		},
+		"single": {
+			"pageTitle": "Страница выговора",
+			"info": {
+				"id": "<0>ID: <1>{{id}}</1></0>"
+			}
+		},
+		"import": {
+			"pageTitle": "Импорт выговоров"
 		}
 	}
 }
