Internships edit UI are ready

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -374,5 +374,67 @@
 				"graduateYear": "<0>Год выпуска: <1>{{graduateYear}}</1></0>"
 			}
 		}
+	},
+
+	"internships": {
+		"name": "Стажировки",
+		"all": {
+			"pageTitle": "Стажировки",
+			"noForm": "стажировок",
+			"filterUser": "Поиск по пользователю",
+			"filterCategory": "Поиск по категории",
+			"filterTheme": "Поиск по теме стажировки",
+			"filterFrom": "С",
+			"filterTo": "По",
+			"filterHoursMore": "Часов больше чем",
+			"filterHoursLess": "Часов меньше чем",
+			"user": "Пользователь",
+			"category": "Категория",
+			"title": "Тема",
+			"hours": "Часов",
+			"to": "Дата окончания"
+		},
+		"add": {
+			"pageTitle": "Добавить стажировку",
+			"code": "Код",
+			"place": "Место",
+			"title": "Тема",
+			"category": "Категория",
+			"user": "Пользователь",
+			"from": "С",
+			"to": "По",
+			"hours": "Часы",
+			"credits": "Кредиты"
+		},
+		"edit": {
+			"pageTitle": "Редактировать стажировку",
+			"code": "Код",
+			"place": "Место",
+			"title": "Тема",
+			"category": "Категория",
+			"user": "Пользователь",
+			"from": "С",
+			"to": "По",
+			"hours": "Часы",
+			"credits": "Кредиты"
+		},
+		"import": {
+			"pageTitle": "Импорт стажировок"
+		},
+		"single": {
+			"pageTitle": "Страница стажировки",
+			"info": {
+				"id": "<0>ID: <1>{{id}}</1></0>",
+				"user": "<0>Пользователь: <1>{{user}}</1></0>",
+				"title": "<0>Тема стажировки: <1>{{title}}</1></0>",
+				"category": "<0>Категория: <1>{{category}}</1></0>",
+				"place": "<0>Место стажировки: <1>{{place}}</1></0>",
+				"from": "<0>C: <1>{{from}}</1></0>",
+				"to": "<0>По: <1>{{to}}</1></0>",
+				"hours": "<0>Часы: <1>{{hours}}</1></0>",
+				"credits": "<0>Кредиты: <1>{{credits}}</1></0>",
+				"code": "<0>Код: <1>{{code}}</1></0>"
+			}
+		}
 	}
 }
