Internships edit are ready

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -42,7 +42,8 @@
 			"categories": "Категории стажировки",
 			"honors": "Награды",
 			"rebukes": "Выговоры",
-			"educations": "Образования"
+			"educations": "Образования",
+			"internships": "Стажировки"
 		}
 	},
 
