Connected with backend

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -14,6 +14,7 @@
 		"add": "Добавить",
 		"downloadExample": "Скачать образец",
 		"importFile": "Выберите файл для импорта",
+		"install": "+ Установить",
 		"roles": {
 			"admin": "Админ",
 			"moderator": "Модератор",
@@ -43,7 +44,8 @@
 			"honors": "Награды",
 			"rebukes": "Выговоры",
 			"educations": "Образования",
-			"internships": "Стажировки"
+			"internships": "Стажировки",
+			"qualifications": "Повышения квалификаций"
 		}
 	},
 
@@ -435,6 +437,49 @@
 				"hours": "<0>Часы: <1>{{hours}}</1></0>",
 				"credits": "<0>Кредиты: <1>{{credits}}</1></0>",
 				"code": "<0>Код: <1>{{code}}</1></0>"
+			}
+		}
+	},
+
+	"qualifications": {
+		"name": "Повышения категорий",
+		"categories": ["Специалист", "Специалист 2 категории", "Специалист 1 категории", "Специалист высшей категории"],
+		"all": {
+			"pageTitle": "Повышения категорий",
+			"noForm": "повышений",
+			"filterUser": "Поиск по пользователю",
+			"filterName": "Поиск по категории",
+			"filterFrom": "С",
+			"filterTo": "По",
+			"user": "Пользователь",
+			"name": "Категория",
+			"date": "Дата"
+		},
+		"add": {
+			"pageTitle": "Добавить повышение категории",
+			"user": "Пользователь",
+			"name": "Категория",
+			"date": "Дата повышения",
+			"description": "Приметка"
+		},
+		"edit": {
+			"pageTitle": "Редактировать стажировку",
+			"user": "Пользователь",
+			"date": "Дата",
+			"name": "Категория",
+			"description": "Приметка"
+		},
+		"import": {
+			"pageTitle": "Импорт повышения категорий"
+		},
+		"single": {
+			"pageTitle": "Страница повышения категорий",
+			"info": {
+				"id": "<0>ID: <1>{{id}}</1></0>",
+				"user": "<0>Пользователь: <1>{{user}}</1></0>",
+				"name": "<0>Категория: <1>{{name}}</1></0>",
+				"date": "<0>Дата: <1>{{date}}</1></0>",
+				"description": "<0>Приметка: <1>{{description}}</1></0>"
 			}
 		}
 	}
