Add all str in translations, make http loading and detection

--- a/public/translations/ru.json
+++ b/public/translations/ru.json
@@ -2,6 +2,7 @@
 	"common": {
 		"edit": "Редактировать",
 		"import": "Импорт",
+		"export": "Экспорт",
 		"avatar": "Аватар",
 		"notSetted": "Не установлено",
 		"search": "Поиск",
@@ -21,6 +22,89 @@
 			"viewer": "Просматриватель",
 			"user": "Пользователь"
 		}
+	},
+
+	"messages": {
+		"categories": {
+			"add": "Категория стажировок создана",
+			"delete": "Категория стажировок с id {{id}} удалена",
+			"edit": "Категория стажировки отредактирована"
+		},
+		"commissions": {
+			"add": "Коммисия создана",
+			"delete": "Коммисия с id {{id}} удалена",
+			"edit": "Комиссия отредактирована"
+		},
+		"departments": {
+			"add": "Отделение создано",
+			"delete": "Отделение с id {{id}} удалено",
+			"edit": "Отделение отредактировано"
+		},
+		"educations": {
+			"add": "Образование добавлено",
+			"delete": "Образование с id {{id}} удалено",
+			"edit": "Образование отредактировано"
+		},
+		"honors": {
+			"add": "Награда добавлена",
+			"delete": "Награда с id {{id}} удалена",
+			"edit": "Награда отредактирована",
+			"import": "Награды импортированы"
+		},
+		"internships": {
+			"add": "Стажировка добавлена",
+			"delete": "Стажировка с id {{id}} удалена",
+			"edit": "Стажировка отредактирована",
+			"import": "Стажировки импортированы"
+		},
+		"profileEdit": "Профиль отредактирован",
+		"userInfoError": "Ошибка загрузки профиля пользователя",
+		"publications": {
+			"add": "Публикация добавлена",
+			"delete": "Публикация с id {{id}} удалена",
+			"edit": "Публикация отредактирована",
+			"import": "Публикации импортированы"
+		},
+		"qualifications": {
+			"add": "Повышение квалификации добавлено",
+			"delete": "Повышение квалификации с id {{id}} удалено",
+			"edit": "Повышение квалификации отредактировано",
+			"import": "Повышения квалификаций импортированы"
+		},
+		"ranks": {
+			"add": "Должность добавлена",
+			"delete": "Должность с id {{id}} удалена",
+			"edit": "Должность отредактирована"
+		},
+		"rebukes": {
+			"add": "Выговор добавлен",
+			"delete": "Выговор с id {{id}} удален",
+			"edit": "Выговор отредактирован",
+			"import": "Выговоры импортированы"
+		},
+		"users": {
+			"add": "Пользователь добавлен",
+			"delete": "Пользователь с id {{id}} удален",
+			"edit": "Пользователь отредактирован",
+			"import": "Пользователи импортированы"
+		}
+	},
+
+	"validators": {
+		"date": "Поле должно быть валидной датой",
+		"dateMore": "Поле должно быть больше {{field}}",
+		"dateMore_equal": "Поле должно быть больше или равно {{field}}",
+		"email": "Введите корректный email",
+		"lengthIn": "Поле должно содержать значение",
+		"lengthIn_from": "$t(validators.lengthIn) от {{min}}",
+		"lengthIn_to": "$t(validators.lengthIn) до {{max}}",
+		"lengthIn_from_to": "$t(validators.lengthIn) от {{min}} до {{max}}",
+		"phone": "Введите корректный телефон",
+		"positive": "Введите положительное число",
+		"required": "Поле обязательно для заполнения",
+		"sameAs": "Поле должно совпадать с полем {{field}}",
+		"url": "Неверный формат url",
+		"year": "Поле должно быть валидным годом"
 	},
 
 	"layout": {
@@ -45,7 +129,8 @@
 			"rebukes": "Выговоры",
 			"educations": "Образования",
 			"internships": "Стажировки",
-			"qualifications": "Повышения квалификаций"
+			"qualifications": "Повышения квалификаций",
+			"users": "Пользователи"
 		}
 	},
 
@@ -96,10 +181,10 @@
 				"category": "Категория",
 				"date": "Дата",
 				"categories": [
-					"Спеціаліст",
-					"Спеціаліст 2 категорії",
-					"Спеціаліст 1 категорії",
-					"Спеціаліст вищої категорії"
+					"Специалист",
+					"Специалист 2 категории",
+					"Специалист 1 категории",
+					"Специалист висшей категории"
 				]
 			},
 			"honors": {
@@ -481,6 +566,74 @@
 				"date": "<0>Дата: <1>{{date}}</1></0>",
 				"description": "<0>Приметка: <1>{{description}}</1></0>"
 			}
+		}
+	},
+
+	"users": {
+		"name": "Пользователи",
+		"add": {
+			"pageTitle": "Добавить пользователя",
+			"fullName": "ФИО",
+			"email": "Email",
+			"commission": "Комиссия",
+			"department": "Отделение",
+			"password": "Пароль",
+			"confirm": "Повторите пароль"
+		},
+		"all": {
+			"pageTitle": "Пользователи",
+			"filterName": "Поиск по имени",
+			"filterEmail": "Поиск по email",
+			"filterCommission": "Поиск по комиссии",
+			"filterDepartment": "Поиск по отделению",
+			"filterRank": "Поиск по должности",
+			"filterTitle": "Поиск по педагогическому званию",
+			"filterCategory": "Поиск по категории",
+			"name": "Имя",
+			"email": "Email",
+			"avatar": "Аватар",
+			"noForm": "пользователей"
+		},
+		"modal": {
+			"personal": "Личная",
+			"fieldName": "Поле",
+			"fieldValue": "Значение",
+			"fullName": "ФИО",
+			"email": "Email",
+			"address": "Адресс",
+			"birthday": "День рождения",
+			"phone": "Телефон",
+			"professional": "Профессиональная",
+			"commission": "Комиссия",
+			"department": "Отделение",
+			"category": "Категория",
+			"pedagogicalTitle": "Педагогическое звание",
+			"rank": "Должность",
+			"experience": "Опыт"
+		},
+		"edit": {
+			"pageTitle": "Редактирование пользователя",
+			"personal": "Личная",
+			"professional": "Професиональная",
+			"fullName": "ФИО",
+			"email": "Email",
+			"birthday": "День рождения",
+			"phone": "Телефон",
+			"password": "Пароль",
+			"confirm": "Повторите пароль",
+			"address": "Адрес",
+			"avatar": "Выберите аватар",
+			"department": "Отделение",
+			"commission": "Комиссия",
+			"rank": "Должность",
+			"role": "Роль",
+			"year": "Год принятия на роботу",
+			"pedagogical": "Педагогическое звание",
+			"experience": "Опыт",
+			"academic": "Академическое звание",
+			"academicYear": "Год устанавления академ звания",
+			"scientificDegree": "Научная степень",
+			"scientificDegreeYear": "Год установления научной степени"
 		}
 	}
 }
