Constants are ready

--- a/public/translations/ru.json
+++ b/public/translations/ru.json
@@ -16,12 +16,27 @@
 		"downloadExample": "Скачать образец",
 		"importFile": "Выберите файл для импорта",
 		"install": "+ Установить",
+		"notExists": "Такого нет",
 		"roles": {
 			"admin": "Админ",
 			"moderator": "Модератор",
 			"viewer": "Просматриватель",
 			"user": "Пользователь"
-		}
+		},
+		"pedTitles": {
+			"methodist": "Преподаватель-методист",
+			"higher": "Старший преподаватель"
+		},
+		"academicStatus": {
+			"candidate": "Кандидат наук",
+			"doctor": "Доктор наук"
+		},
+		"scientific": {
+			"docent": "Доцент",
+			"searcher": "Старший исследователь",
+			"professor": "Професор"
+		},
+		"categories": ["Специалист", "Специалист 2 категории", "Специалист 1 категории", "Специалист высшей категории"]
 	},
 
 	"messages": {
